bugfix for  Google Codelab pipeline

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -24,12 +24,12 @@
     "\n",
     "# regex lists (as Python lists of strings)\n",
     "gpu_tensors = [\n",
-    "    r\".*\",\n",
+    "    \".*\",\n",
     "]                                                           #@param {type:\"raw\"}\n",
     "cpu_tensors = [\n",
-    "    r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_down_exps\\.weight\",\n",
-    "    r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_up_exps\\.weight\",\n",
-    "    r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_gate_exps\\.weight\",\n",
+    "    \"blk\\\\.([3-9]|[1-5][0-9]|60)\\\\.ffn_down_exps\\\\.weight\",\n",
+    "    \"blk\\\\.([3-9]|[1-5][0-9]|60)\\\\.ffn_up_exps\\\\.weight\",\n",
+    "    \"blk\\\\.([3-9]|[1-5][0-9]|60)\\\\.ffn_gate_exps\\\\.weight\",\n",
     "]                                                           #@param {type:\"raw\"}\n",
     "\n",
     "# quant types\n",
@@ -45,7 +45,7 @@
     "# assignment override\n",
     "gpu_assign_qtype = \"iq4_xs\"                                 #@param {type:\"string\"}\n",
     "gpu_assign_tensors = [\n",
-    "    r\"blk\\.([0-9]|[1-5][0-9]|60)\\.attn_k_b\\.weight=q8_0\"\n",
+    "    \"blk\\\\.([0-9]|[1-5][0-9]|60)\\\\.attn_k_b\\\\.weight=q8_0\"\n",
     "]                                                           #@param {type:\"raw\"}\n"
    ]
   },
