Google Colab bugfix

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -23,14 +23,8 @@
     "csv_file = \"ppl_results.csv\"                                        #@param {type:\"string\"}\n",
     "\n",
     "# regex lists (as Python lists of strings)\n",
-    "gpu_tensors = [\n",
-    "    \".*\",\n",
-    "]                                                           #@param {type:\"raw\"}\n",
-    "cpu_tensors = [\n",
-    "    \"blk\\\\.([3-9]|[1-5][0-9]|60)\\\\.ffn_down_exps\\\\.weight\",\n",
-    "    \"blk\\\\.([3-9]|[1-5][0-9]|60)\\\\.ffn_up_exps\\\\.weight\",\n",
-    "    \"blk\\\\.([3-9]|[1-5][0-9]|60)\\\\.ffn_gate_exps\\\\.weight\",\n",
-    "]                                                           #@param {type:\"raw\"}\n",
+    "gpu_tensors = [r\".*\",]                                                                                                                                                           #@param {type:\"raw\"}\n",
+    "cpu_tensors = [r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_down_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_up_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_gate_exps\\.weight\",]  #@param {type:\"raw\"}\n",
     "\n",
     "# quant types\n",
     "cpu_quants = [\"iq4_ks\", \"iq3_k\", \"iq2_k\", \"iq1_m_r4\"]   #@param {type:\"raw\"}\n",
@@ -43,10 +37,8 @@
     "exponential_factor = 8          #@param {type:\"integer\"}\n",
     "\n",
     "# assignment override\n",
-    "gpu_assign_qtype = \"iq4_xs\"                                 #@param {type:\"string\"}\n",
-    "gpu_assign_tensors = [\n",
-    "    \"blk\\\\.([0-9]|[1-5][0-9]|60)\\\\.attn_k_b\\\\.weight=q8_0\"\n",
-    "]                                                           #@param {type:\"raw\"}\n"
+    "gpu_assign_qtype = \"iq4_xs\"                                                 #@param {type:\"string\"}\n",
+    "gpu_assign_tensors = [r\"blk\\.([0-9]|[1-5][0-9]|60)\\.attn_k_b\\.weight=q8_0\",] #@param {type:\"raw\"}\n"
    ]
   },
   {
