--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -48,7 +48,8 @@
    "outputs": [],
    "source": [
     "# Clone and cd into the tool suite\n",
-    "!git clone {repo_url} && cd GGUF-Tool-Suite"
+    "![[ -d GGUF-Tool-Suite ]] || git clone {repo_url}\n",
+    "%cd GGUF-Tool-Suite"
    ]
   },
   {
