Fix script not executable

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -49,7 +49,9 @@
    "source": [
     "# Clone and cd into the tool suite\n",
     "![[ -d GGUF-Tool-Suite ]] || git clone {repo_url}\n",
-    "%cd GGUF-Tool-Suite"
+    "%cd GGUF-Tool-Suite\n",
+    "# ✅ Make sure all .sh and .py scripts are executable\n",
+    "!chmod +x *.sh *.py"
    ]
   },
   {
