--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -1,117 +1,145 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Recipe Pipeline\n",
-    "Configure your paths & regex flags below, then run all cells ▶️"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "params"
-   },
-   "outputs": [],
-   "source": [
-    "# @title ⚙️ Pipeline Parameters\n",
-    "repo_url = \"https://github.com/Thireus/GGUF-Tool-Suite.git\"         #@param {type:\"string\"}\n",
-    "model_name = \"recipe_examples/DeepSeek-R1-0528\"                     #@param {type:\"string\"}\n",
-    "model_link = \"https://huggingface.co/deepseek-ai/DeepSeek-R1-0528\"  #@param {type:\"string\"}\n",
-    "csv_file = \"ppl_results.csv\"                                        #@param {type:\"string\"}\n",
-    "\n",
-    "# regex lists (as Python lists of strings)\n",
-    "gpu_tensors = [r\".*\",]                                                                                                                                                           #@param {type:\"raw\"}\n",
-    "cpu_tensors = [r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_down_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_up_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_gate_exps\\.weight\",]  #@param {type:\"raw\"}\n",
-    "\n",
-    "# quant types\n",
-    "cpu_quants = [\"iq4_ks\", \"iq3_k\", \"iq2_k\", \"iq1_m_r4\"]   #@param {type:\"raw\"}\n",
-    "gpu_quants = [\"q8_0\", \"iq5_k_r4\", \"iq6_k\"]              #@param {type:\"raw\"}\n",
-    "\n",
-    "# sizes & tuning\n",
-    "cpu_tensors_max_size = 230      #@param {type:\"integer\"}\n",
-    "gpu_tensors_max_size = \"95%\"    #@param {type:\"string\"}\n",
-    "tolerance = 0.01                #@param {type:\"number\"}\n",
-    "exponential_factor = 8          #@param {type:\"integer\"}\n",
-    "\n",
-    "# assignment override\n",
-    "gpu_assign_qtype = \"iq4_xs\"                                                 #@param {type:\"string\"}\n",
-    "gpu_assign_tensors = [r\"blk\\.([0-9]|[1-5][0-9]|60)\\.attn_k_b\\.weight=q8_0\",] #@param {type:\"raw\"}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Clone and cd into the tool suite\n",
-    "![[ -d GGUF-Tool-Suite ]] || git clone {repo_url}\n",
-    "%cd GGUF-Tool-Suite\n",
-    "# ✅ Make sure all .sh and .py scripts are executable\n",
-    "!chmod +x *.sh *.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Build up all the CLI flags from our params\n",
-    "import shlex, subprocess\n",
-    "\n",
-    "def join_list(flag, items):\n",
-    "    return \" \".join(f\"--{flag} {shlex.quote(it)}\" for it in items)\n",
-    "\n",
-    "base_cmd = [\n",
-    "    \"python\", \"quant_assign.py\", csv_file,\n",
-    "]\n",
-    "flags = []\n",
-    "flags += [f\"--cpu-tensors-max-size {cpu_tensors_max_size}\"]\n",
-    "flags += [f\"--gpu-tensors-max-size {gpu_tensors_max_size}\"]\n",
-    "flags += [f\"--tolerance {tolerance}\"]\n",
-    "flags += [f\"--exponential-factor {exponential_factor}\"]\n",
-    "\n",
-    "flags += join_list(\"gpu-tensors\", gpu_tensors).split()\n",
-    "flags += join_list(\"cpu-tensors\", cpu_tensors).split()\n",
-    "flags += join_list(\"cpu-quants\", cpu_quants).split()\n",
-    "flags += join_list(\"gpu-quants\", gpu_quants).split()\n",
-    "flags += [f\"--gpu-assign-qtype {gpu_assign_qtype}\"]\n",
-    "flags += join_list(\"gpu-assign-tensors\", gpu_assign_tensors).split()\n",
-    "\n",
-    "# run quant_assign.py and pipe into merger script\n",
-    "cmd = base_cmd + flags\n",
-    "\n",
-    "# 1. Run quant_assign.py and capture its stdout\n",
-    "result = subprocess.run(cmd, capture_output=True, text=True)\n",
-    "if result.returncode != 0:\n",
-    "    print(\"quant_assign.py failed:\", result.stderr)\n",
-    "    raise SystemExit(1)\n",
-    "\n",
-    "# 2. Feed that output into quants_regex_merger.sh\n",
-    "merge_cmd = [\n",
-    "    \"bash\", \"./quants_regex_merger.sh\",\n",
-    "    \"--model-name\", model_name,\n",
-    "    \"--add-ppl\", \"0\",\n",
-    "    \"--model-link\", model_link\n",
-    "]\n",
-    "merge = subprocess.run(merge_cmd, input=result.stdout, text=True)\n",
-    "if merge.returncode != 0:\n",
-    "    print(\"quants_regex_merger.sh failed\")\n",
-    "    raise SystemExit(1)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# Recipe Pipeline\n",
+                "Configure your parameters below, then run all cells ▶️"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "98aa646d",
+            "metadata": {
+                "id": "params"
+            },
+            "outputs": [],
+            "source": [
+                "# @title ⚙️ Pipeline Parameters\n",
+                "repo_url = \"https://github.com/Thireus/GGUF-Tool-Suite.git\"         #@param {type:\"string\"}\n",
+                "model_name = \"recipe_examples/DeepSeek-R1-0528\"                     #@param {type:\"string\"}\n",
+                "model_link = \"https://huggingface.co/deepseek-ai/DeepSeek-R1-0528\"  #@param {type:\"string\"}\n",
+                "csv_file = \"ppl_results.csv\"                                        #@param {type:\"string\"}\n",
+                "\n",
+                "# regex lists (as Python lists of strings)\n",
+                "gpu_tensors = [r\".*\"]    #@param {type:\"raw\"}\n",
+                "cpu_tensors = [r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_down_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_up_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_gate_exps\\.weight\"]   #@param {type:\"raw\"}\n",
+                "\n",
+                "# quant types\n",
+                "cpu_quants = [\"iq4_ks\", \"iq3_k\", \"iq2_k\", \"iq1_m_r4\"]   #@param {type:\"raw\"}\n",
+                "gpu_quants = [\"q8_0\", \"iq5_k_r4\", \"iq6_k\"]              #@param {type:\"raw\"}\n",
+                "\n",
+                "# sizes & tuning\n",
+                "cpu_tensors_max_size = \"230\"       #@param {type:\"string\"}\n",
+                "gpu_tensors_max_size = \"95%\"       #@param {type:\"string\"}\n",
+                "tolerance = 0.01                #@param {type:\"number\"}\n",
+                "exponential_factor = 8          #@param {type:\"integer\"}\n",
+                "\n",
+                "# assignment override\n",
+                "gpu_assign_qtype = \"iq4_xs\"    #@param {type:\"string\"}\n",
+                "gpu_assign_tensors = [r\"blk\\.([0-9]|[1-5][0-9]|60)\\.attn_k_b\\.weight=q8_0\"] #@param {type:\"raw\"}\n",
+                "cpu_assign_qtype = None         #@param {type:\"raw\"}\n",
+                "cpu_assign_tensors = []         #@param {type:\"raw\"}\n",
+                "\n",
+                "# additional flags\n",
+                "debug = False              #@param {type:\"boolean\"}\n",
+                "info = False                #@param {type:\"boolean\"}\n",
+                "ignore_f32 = False         #@param {type:\"boolean\"}\n",
+                "tensors_from_csv = False   #@param {type:\"boolean\"}\n",
+                "cpu_irq_k = 1.5            #@param {type:\"number\"}\n",
+                "gpu_irq_k = 1.5            #@param {type:\"number\"}"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "86b825b3",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Clone and cd into the tool suite\n",
+                "![[ -d GGUF-Tool-Suite ]] || git clone {repo_url}\n",
+                "%cd GGUF-Tool-Suite\n",
+                "!chmod +x *.sh *.py"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "c336d64d",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import shlex, subprocess\n",
+                "\n",
+                "def add_flag(cmd, key, val):\n",
+                "    if isinstance(val, bool):\n",
+                "        if val:\n",
+                "            cmd.append(f\"--{key}\")\n",
+                "    elif val is not None:\n",
+                "        cmd.extend([f\"--{key}\", str(val)])\n",
+                "\n",
+                "def add_list_flag(cmd, key, vals):\n",
+                "    if vals:\n",
+                "        cmd.append(f\"--{key}\")\n",
+                "        cmd.extend(vals)\n",
+                "\n",
+                "cmd = [\"python\", \"quant_assign.py\", csv_file]\n",
+                "\n",
+                "add_flag(cmd, \"tolerance\", tolerance)\n",
+                "add_flag(cmd, \"cpu-irq-k\", cpu_irq_k)\n",
+                "add_flag(cmd, \"gpu-irq-k\", gpu_irq_k)\n",
+                "add_flag(cmd, \"qtype\", None)\n",
+                "add_flag(cmd, \"cpu-assign-qtype\", cpu_assign_qtype)\n",
+                "add_flag(cmd, \"gpu-assign-qtype\", gpu_assign_qtype)\n",
+                "add_flag(cmd, \"cpu-tensors-max-size\", cpu_tensors_max_size)\n",
+                "add_flag(cmd, \"gpu-tensors-max-size\", gpu_tensors_max_size)\n",
+                "add_flag(cmd, \"exponential-factor\", exponential_factor)\n",
+                "add_flag(cmd, \"debug\", debug)\n",
+                "add_flag(cmd, \"info\", info)\n",
+                "add_flag(cmd, \"ignore-f32\", ignore_f32)\n",
+                "add_flag(cmd, \"tensors-from-csv\", tensors_from_csv)\n",
+                "\n",
+                "add_list_flag(cmd, \"cpu-tensors\", cpu_tensors)\n",
+                "add_list_flag(cmd, \"gpu-tensors\", gpu_tensors)\n",
+                "add_list_flag(cmd, \"cpu-quants\", cpu_quants)\n",
+                "add_list_flag(cmd, \"gpu-quants\", gpu_quants)\n",
+                "add_list_flag(cmd, \"cpu-assign-tensors\", cpu_assign_tensors)\n",
+                "add_list_flag(cmd, \"gpu-assign-tensors\", gpu_assign_tensors)\n",
+                "\n",
+                "# Print for verification\n",
+                "print(\"\\nRunning command:\")\n",
+                "print(\" \\n\".join(shlex.quote(c) for c in cmd))\n",
+                "\n",
+                "# Run quant_assign.py\n",
+                "result = subprocess.run(cmd, capture_output=True, text=True)\n",
+                "if result.returncode != 0:\n",
+                "    print(\"quant_assign.py failed:\", result.stderr)\n",
+                "    raise SystemExit(1)\n",
+                "\n",
+                "# Merge regex\n",
+                "merge_cmd = [\n",
+                "    \"bash\", \"./quants_regex_merger.sh\",\n",
+                "    \"--model-name\", model_name,\n",
+                "    \"--add-ppl\", \"0\",\n",
+                "    \"--model-link\", model_link\n",
+                "]\n",
+                "merge = subprocess.run(merge_cmd, input=result.stdout, text=True)\n",
+                "if merge.returncode != 0:\n",
+                "    print(\"quants_regex_merger.sh failed\")\n",
+                "    raise SystemExit(1)"
+            ]
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "Python 3",
+            "language": "python",
+            "name": "python3"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 5
 }
