pipeline final bugfix

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -19,7 +19,7 @@
             "source": [
                 "# @title ⚙️ Pipeline Parameters\n",
                 "repo_url = \"https://github.com/Thireus/GGUF-Tool-Suite.git\"         #@param {type:\"string\"}\n",
-                "model_name = \"recipe_examples/DeepSeek-R1-0528\"                     #@param {type:\"string\"}\n",
+                "model_name = \"DeepSeek-R1-0528\"                                     #@param {type:\"string\"}\n",
                 "model_link = \"https://huggingface.co/deepseek-ai/DeepSeek-R1-0528\"  #@param {type:\"string\"}\n",
                 "csv_file = \"ppl_results.csv\"                                        #@param {type:\"string\"}\n",
                 "\n",
@@ -126,7 +126,11 @@
                 "    \"--add-ppl\", \"0\",\n",
                 "    \"--model-link\", model_link\n",
                 "]\n",
-                "merge = subprocess.run(merge_cmd, input=result.stdout, text=True)\n",
+                "merge = subprocess.run(merge_cmd, input=result.stdout, capture_output=True, text=True)\n",
+                "\n",
+                "# Print final output\n",
+                "print(merge.stdout)\n",
+                "\n",
                 "if merge.returncode != 0:\n",
                 "    print(\"quants_regex_merger.sh failed\")\n",
                 "    raise SystemExit(1)"
