remove debug for Google Codelab pipeline

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -110,8 +110,8 @@
                 "add_list_flag(cmd, \"gpu-assign-tensors\", gpu_assign_tensors)\n",
                 "\n",
                 "# Print for verification\n",
-                "print(\"\\nRunning command:\")\n",
-                "print(\" \\n\".join(shlex.quote(c) for c in cmd))\n",
+                "#print(\"\\nRunning command:\")\n",
+                "#print(\" \\n\".join(shlex.quote(c) for c in cmd))\n",
                 "\n",
                 "# Run quant_assign.py\n",
                 "result = subprocess.run(cmd, capture_output=True, text=True)\n",
