Multi-model support + sha256sum imrpovement and bugfix for quants_regex_merger.sh

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -21,7 +21,6 @@
                 "repo_url = \"https://github.com/Thireus/GGUF-Tool-Suite.git\"         #@param {type:\"string\"}\n",
                 "model_name = \"DeepSeek-R1-0528\"                                     #@param {type:\"string\"}\n",
                 "model_link = \"https://huggingface.co/deepseek-ai/DeepSeek-R1-0528\"  #@param {type:\"string\"}\n",
-                "csv_file = \"ppl_results.csv\"                                        #@param {type:\"string\"}\n",
                 "\n",
                 "# regex lists (as Python lists of strings)\n",
                 "gpu_tensors = [r\".*\"]    #@param {type:\"raw\"}\n",
@@ -55,15 +54,53 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "86b825b3",
             "metadata": {},
-            "outputs": [],
             "source": [
-                "# Clone and cd into the tool suite\n",
-                "![[ -d GGUF-Tool-Suite ]] || git clone {repo_url}\n",
-                "%cd GGUF-Tool-Suite\n",
-                "!chmod +x *.sh *.py"
+              "%%bash -e -s \"$repo_url\" \"$model_name\"\n",
+              "REPO_URL=\"$1\"\n",
+              "MODEL_NAME=\"$2\"\n",
+              "\n",
+              "# 1) Clone (if needed) and cd into repo\n",
+              "if [ ! -d GGUF-Tool-Suite ]; then\n",
+              "  echo \"↳ GGUF-Tool-Suite not found; cloning from $REPO_URL...\"\n",
+              "  git clone \"$REPO_URL\" \\\n",
+              "    || { echo \"❌ ERROR: failed to clone GGUF-Tool-Suite. Aborting.\"; exit 1; }\n",
+              "fi\n",
+              "cd GGUF-Tool-Suite\n",
+              "\n",
+              "# 2) Verify model directory exists\n",
+              "if [ ! -d models/$MODEL_NAME ]; then\n",
+              "  echo \"❌ ERROR: models/$MODEL_NAME not found; this model is not supported yet.\"\n",
+              "  exit 1\n",
+              "fi\n",
+              "\n",
+              "# 3) Link download.conf (or abort if missing)\n",
+              "if [ -f models/$MODEL_NAME/download.conf ]; then\n",
+              "  ln -sf models/$MODEL_NAME/download.conf .\n",
+              "else\n",
+              "  echo \"❌ ERROR: download.conf for '$MODEL_NAME' missing; this model isn't meant to be used here.\"\n",
+              "  exit 1\n",
+              "fi\n",
+              "\n",
+              "# 4) Link ppl_results.csv (or abort with warning)\n",
+              "if [ -f models/$MODEL_NAME/ppl_results.csv ]; then\n",
+              "  ln -sf models/$MODEL_NAME/ppl_results.csv .\n",
+              "else\n",
+              "  echo \"⚠️ WARNING: ppl_results.csv missing; support for '$MODEL_NAME' likely coming soon.\"\n",
+              "  exit 1\n",
+              "fi\n",
+              "\n",
+              "# 5) Make all scripts executable\n",
+              "chmod +x *.sh *.py"
             ]
+        },
+        {
+          "cell_type": "code",
+          "execution_count": null,
+          "metadata": {},
+          "source": [
+            "%cd GGUF-Tool-Suite/models/{model_name}"
+          ]
         },
         {
             "cell_type": "code",
@@ -86,7 +123,7 @@
                 "        cmd.append(f\"--{key}\")\n",
                 "        cmd.extend(vals)\n",
                 "\n",
-                "cmd = [\"python\", \"quant_assign.py\", csv_file]\n",
+                "cmd = [\"python\", \"../../quant_assign.py\", \"ppl_results.csv\"]\n",
                 "\n",
                 "add_flag(cmd, \"tolerance\", tolerance)\n",
                 "add_flag(cmd, \"cpu-irq-k\", cpu_irq_k)\n",
@@ -121,7 +158,7 @@
                 "\n",
                 "# Merge regex\n",
                 "merge_cmd = [\n",
-                "    \"bash\", \"./quants_regex_merger.sh\",\n",
+                "    \"bash\", \"../../quants_regex_merger.sh\",\n",
                 "    \"--model-name\", model_name,\n",
                 "    \"--add-ppl\", \"0\",\n",
                 "    \"--model-link\", model_link\n",
