Google Colab gpg verification support

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -48,59 +48,85 @@
                 "ignore_f32 = False         #@param {type:\"boolean\"}\n",
                 "tensors_from_csv = False   #@param {type:\"boolean\"}\n",
                 "cpu_irq_k = 1.5            #@param {type:\"number\"}\n",
-                "gpu_irq_k = 1.5            #@param {type:\"number\"}"
+                "gpu_irq_k = 1.5            #@param {type:\"number\"}\n",
+                "skip_gpg = False              #@param {type:\"boolean\"}\n"
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
+            "id": "3a1e3dd5",
             "metadata": {},
+            "outputs": [],
             "source": [
-              "%%bash -e -s \"$repo_url\" \"$model_name\"\n",
-              "REPO_URL=\"$1\"\n",
-              "MODEL_NAME=\"$2\"\n",
-              "\n",
-              "# 1) Clone (if needed) and cd into repo\n",
-              "if [ ! -d GGUF-Tool-Suite ]; then\n",
-              "  echo \"↳ GGUF-Tool-Suite not found; cloning from $REPO_URL...\"\n",
-              "  git clone \"$REPO_URL\" \\\n",
-              "    || { echo \"❌ ERROR: failed to clone GGUF-Tool-Suite. Aborting.\"; exit 1; }\n",
-              "fi\n",
-              "cd GGUF-Tool-Suite\n",
-              "\n",
-              "# 2) Verify model directory exists\n",
-              "if [ ! -d models/$MODEL_NAME ]; then\n",
-              "  echo \"❌ ERROR: models/$MODEL_NAME not found; this model is not supported yet.\"\n",
-              "  exit 1\n",
-              "fi\n",
-              "\n",
-              "# 3) Link download.conf (or abort if missing)\n",
-              "if [ -f models/$MODEL_NAME/download.conf ]; then\n",
-              "  ln -sf models/$MODEL_NAME/download.conf .\n",
-              "else\n",
-              "  echo \"❌ ERROR: download.conf for '$MODEL_NAME' missing; this model isn't meant to be used here.\"\n",
-              "  exit 1\n",
-              "fi\n",
-              "\n",
-              "# 4) Link ppl_results.csv (or abort with warning)\n",
-              "if [ -f models/$MODEL_NAME/ppl_results.csv ]; then\n",
-              "  ln -sf models/$MODEL_NAME/ppl_results.csv .\n",
-              "else\n",
-              "  echo \"⚠️ WARNING: ppl_results.csv missing; support for '$MODEL_NAME' likely coming soon.\"\n",
-              "  exit 1\n",
-              "fi\n",
-              "\n",
-              "# 5) Make all scripts executable\n",
-              "chmod +x *.sh *.py"
+                "%cd ~\n",
+                "!rm -rf GGUF-Tool-Suite # Clear all the things"
             ]
         },
         {
-          "cell_type": "code",
-          "execution_count": null,
-          "metadata": {},
-          "source": [
-            "%cd GGUF-Tool-Suite/models/{model_name}"
-          ]
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "2568d92f",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "%%bash -e -s \"$repo_url\" \"$model_name\"\n",
+                "REPO_URL=\"$1\"\n",
+                "MODEL_NAME=\"$2\"\n",
+                "\n",
+                "# 1) Clone (if needed) and cd into repo\n",
+                "if [ ! -d GGUF-Tool-Suite ]; then\n",
+                "  echo \"↳ GGUF-Tool-Suite not found; cloning from $REPO_URL...\"\n",
+                "  git clone \"$REPO_URL\" \\\n",
+                "    || { echo \"❌ ERROR: failed to clone GGUF-Tool-Suite. Aborting.\"; exit 1; }\n",
+                "fi\n",
+                "cd GGUF-Tool-Suite\n",
+                "\n",
+                "# 2) Verify model directory exists\n",
+                "if [ ! -d models/$MODEL_NAME ]; then\n",
+                "  echo \"❌ ERROR: models/$MODEL_NAME not found; this model is not supported yet.\"\n",
+                "  exit 1\n",
+                "fi\n",
+                "\n",
+                "# 3) Link download.conf (or abort if missing)\n",
+                "if [ -f models/$MODEL_NAME/download.conf ]; then\n",
+                "  ln -sf models/$MODEL_NAME/download.conf .\n",
+                "else\n",
+                "  echo \"❌ ERROR: download.conf for '$MODEL_NAME' missing; this model isn't meant to be used here.\"\n",
+                "  exit 1\n",
+                "fi\n",
+                "\n",
+                "# 4) Link ppl_results.csv (or abort with warning)\n",
+                "if [ -f models/$MODEL_NAME/ppl_results.csv ]; then\n",
+                "  ln -sf models/$MODEL_NAME/ppl_results.csv .\n",
+                "else\n",
+                "  echo \"⚠️ WARNING: ppl_results.csv missing; support for '$MODEL_NAME' likely coming soon.\"\n",
+                "  exit 1\n",
+                "fi\n",
+                "\n",
+                "# 5) Make all scripts executable\n",
+                "chmod +x *.sh *.py"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "cde5856a",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "%cd GGUF-Tool-Suite/models/{model_name}"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "6ebfc19b",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "%pip install pgpy # Install dependency to validate gpg signatures"
+            ]
         },
         {
             "cell_type": "code",
@@ -138,6 +164,7 @@
                 "add_flag(cmd, \"info\", info)\n",
                 "add_flag(cmd, \"ignore-f32\", ignore_f32)\n",
                 "add_flag(cmd, \"tensors-from-csv\", tensors_from_csv)\n",
+                "add_flag(cmd, \"skip-gpg\", skip_gpg)\n",
                 "\n",
                 "add_list_flag(cmd, \"cpu-tensors\", cpu_tensors)\n",
                 "add_list_flag(cmd, \"gpu-tensors\", gpu_tensors)\n",
