--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -199,6 +199,29 @@
                 "    print(\"quants_regex_merger.sh failed\")\n",
                 "    raise SystemExit(1)"
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "637edb2d",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import glob\n",
+                "from google.colab import files\n",
+                "\n",
+                "# List all .recipe files matching the prefix\n",
+                "recipe_files = glob.glob(f\"{model_name}*.recipe\")\n",
+                "\n",
+                "# Print the found files\n",
+                "print(\"Downloading .recipe file:\")\n",
+                "for file in recipe_files:\n",
+                "    print(f\"- {file}\")\n",
+                "\n",
+                "# Auto‑start download\n",
+                "for file in recipe_files:\n",
+                "    files.download(file)"
+            ]
         }
     ],
     "metadata": {
