Better randomisation function for benmark + Google Colab script can now interpolate partial results automatically and auto-download recipes produced + various other changes

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -121,6 +121,23 @@
         {
             "cell_type": "code",
             "execution_count": null,
+            "id": "22fa5266",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "!if [ -f ppl_results.csv ]; then \\\n",
+                "    echo \"Complete ppl_results.csv already exists. Skipping interpolation...\"; \\\n",
+                "elif [ -f ppl_results_partial.csv ]; then \\\n",
+                "    echo \"Interpolation of ppl_results.csv necessary.\"; \\\n",
+                "    python ../../fill_missing_ppl.py ppl_results_partial.csv; \\\n",
+                "else \\\n",
+                "    echo \"Error: No ppl results found. Aborting.\"; \\\n",
+                "fi"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
             "id": "6ebfc19b",
             "metadata": {},
             "outputs": [],
@@ -135,6 +152,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "import os, glob\n",
                 "import shlex, subprocess\n",
                 "\n",
                 "def add_flag(cmd, key, val):\n",
@@ -149,7 +167,18 @@
                 "        cmd.append(f\"--{key}\")\n",
                 "        cmd.extend(vals)\n",
                 "\n",
-                "cmd = [\"python\", \"../../quant_assign.py\", \"ppl_results.csv\"]\n",
+                "# Determine which file to use\n",
+                "if os.path.isfile(\"ppl_results.csv\"):\n",
+                "    input_file = \"ppl_results.csv\"\n",
+                "else:\n",
+                "    # Search for the first matching file in the current directory\n",
+                "    partial_files = glob.glob(\"ppl_results_partial_*interpolated.csv\")\n",
+                "    if partial_files:\n",
+                "        input_file = sorted(partial_files)[0]  # Use the first one alphabetically\n",
+                "    else:\n",
+                "        raise FileNotFoundError(\"No suitable input file found: ppl_results.csv, ppl_results_interpolated.csv, or ppl_results_partial_*interpolated.csv\")\n",
+                "\n",
+                "cmd = [\"python\", \"../../quant_assign.py\", input_file]\n",
                 "\n",
                 "add_flag(cmd, \"tolerance\", tolerance)\n",
                 "add_flag(cmd, \"cpu-irq-k\", cpu_irq_k)\n",
