--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -99,6 +99,9 @@
                 "# 4) Link ppl_results.csv (or abort with warning)\n",
                 "if [ -f models/$MODEL_NAME/ppl_results.csv ]; then\n",
                 "  ln -sf models/$MODEL_NAME/ppl_results.csv .\n",
+                "elif [ -f models/$MODEL_NAME/ppl_results_partial.csv ]; then\n",
+                "  ln -sf models/$MODEL_NAME/ppl_results_partial.csv .\n",
+                "  echo \"⚠️ WARNING: partial calibrated ppl_results_partial.csv found for '$MODEL_NAME; will try to interpolate missing results as best as we can, but this will unlikely produce ppl-optimum quant mixes (so please don't use for production) - full calibrated data likely coming soon.\"\n",
                 "else\n",
                 "  echo \"⚠️ WARNING: ppl_results.csv missing; support for '$MODEL_NAME' likely coming soon.\"\n",
                 "  exit 1\n",
