--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -206,11 +206,16 @@
                 "add_list_flag(cmd, \"gpu-assign-tensors\", gpu_assign_tensors)\n",
                 "\n",
                 "# Print for verification\n",
-                "#print(\"\\nRunning command:\")\n",
-                "#print(\" \\n\".join(shlex.quote(c) for c in cmd))\n",
+                "print(\"\\nRunning quant_assign.py command:\")\n",
+                "print(\" \".join(shlex.quote(c) for c in cmd))\n",
                 "\n",
                 "# Run quant_assign.py\n",
                 "result = subprocess.run(cmd, capture_output=True, text=True)\n",
+                "\n",
+                "# Print stderr and stdout for debugging\n",
+                "print(\"quant_assign.py stdout:\", result.stdout)\n",
+                "print(\"quant_assign.py stderr:\", result.stderr)\n",
+                "\n",
                 "if result.returncode != 0:\n",
                 "    print(\"quant_assign.py failed:\", result.stderr)\n",
                 "    raise SystemExit(1)\n",
