Bugfix for ppl_results_partial.csv

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -100,10 +100,11 @@
                 "if [ -f models/$MODEL_NAME/ppl_results.csv ]; then\n",
                 "  ln -sf models/$MODEL_NAME/ppl_results.csv .\n",
                 "elif [ -f models/$MODEL_NAME/ppl_results_partial.csv ]; then\n",
+                "  rm -f ppl_results.csv\n",
                 "  ln -sf models/$MODEL_NAME/ppl_results_partial.csv .\n",
                 "  echo \"⚠️ WARNING: partial calibrated ppl_results_partial.csv found for '$MODEL_NAME; will try to interpolate missing results as best as we can, but this will unlikely produce ppl-optimum quant mixes (so please don't use for production) - full calibrated data likely coming soon.\"\n",
                 "else\n",
-                "  echo \"⚠️ WARNING: ppl_results.csv missing; support for '$MODEL_NAME' likely coming soon.\"\n",
+                "  echo \"⚠️ WARNING: ppl_results.csv (and ppl_results_partial.csv) missing; support for '$MODEL_NAME' likely coming soon.\"\n",
                 "  exit 1\n",
                 "fi\n",
                 "\n",
