--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -104,12 +104,20 @@
                 "  ln -sf models/$MODEL_NAME/ppl_results_partial.csv .\n",
                 "  echo \"⚠️ WARNING: partial calibrated ppl_results_partial.csv found for '$MODEL_NAME; will try to interpolate missing results as best as we can, but this will unlikely produce ppl-optimum quant mixes (so please don't use for production) - full calibrated data likely coming soon.\"\n",
                 "else\n",
-                "  echo \"⚠️ WARNING: ppl_results.csv (and ppl_results_partial.csv) missing; support for '$MODEL_NAME' likely coming soon.\"\n",
+                "  echo \"❌ ERROR: ppl_results.csv (and ppl_results_partial.csv) missing; support for '$MODEL_NAME' likely coming soon.\"\n",
                 "  exit 1\n",
                 "fi\n",
                 "\n",
                 "# 5) Make all scripts executable\n",
-                "chmod +x *.sh *.py"
+                "chmod +x *.sh *.py\n",
+                "\n",
+                "# 6) Link download.conf\n",
+                "if [ -f models/$MODEL_NAME/download.conf ]; then\n",
+                "  ln -sf models/$MODEL_NAME/download.conf .\n",
+                "else\n",
+                "  echo \"❌ ERROR: download.conf not found for '$MODEL_NAME'; support for '$MODEL_NAME' likely coming soon.\"\n",
+                "  exit 1\n",
+                "fi\n"
             ]
         },
         {
