GPU only or CPU only quants can now be produced

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -31,25 +31,26 @@
                 "gpu_quants = [\"q8_0\", \"iq5_k_r4\", \"iq6_k\"]              #@param {type:\"raw\"}\n",
                 "\n",
                 "# sizes & tuning\n",
-                "cpu_tensors_max_size = \"230\"       #@param {type:\"string\"}\n",
-                "gpu_tensors_max_size = \"95%\"       #@param {type:\"string\"}\n",
+                "cpu_tensors_max_size = \"230\"    #@param {type:\"string\"}\n",
+                "gpu_tensors_max_size = \"95%\"    #@param {type:\"string\"}\n",
                 "tolerance = 0.01                #@param {type:\"number\"}\n",
                 "exponential_factor = 8          #@param {type:\"integer\"}\n",
                 "\n",
                 "# assignment override\n",
                 "gpu_assign_qtype = \"iq4_xs\"    #@param {type:\"string\"}\n",
                 "gpu_assign_tensors = [r\"blk\\.([0-9]|[1-5][0-9]|60)\\.attn_k_b\\.weight=q8_0\"] #@param {type:\"raw\"}\n",
-                "cpu_assign_qtype = None         #@param {type:\"raw\"}\n",
-                "cpu_assign_tensors = []         #@param {type:\"raw\"}\n",
+                "cpu_assign_qtype = None        #@param {type:\"raw\"}\n",
+                "cpu_assign_tensors = []        #@param {type:\"raw\"}\n",
                 "\n",
                 "# additional flags\n",
-                "debug = False              #@param {type:\"boolean\"}\n",
+                "qtype = None                #@param {type:\"string\"}\n",
+                "debug = False               #@param {type:\"boolean\"}\n",
                 "info = False                #@param {type:\"boolean\"}\n",
-                "ignore_f32 = False         #@param {type:\"boolean\"}\n",
-                "tensors_from_csv = False   #@param {type:\"boolean\"}\n",
-                "cpu_irq_k = 1.5            #@param {type:\"number\"}\n",
-                "gpu_irq_k = 1.5            #@param {type:\"number\"}\n",
-                "skip_gpg = False              #@param {type:\"boolean\"}\n"
+                "ignore_f32 = False          #@param {type:\"boolean\"}\n",
+                "tensors_from_csv = False    #@param {type:\"boolean\"}\n",
+                "cpu_irq_k = 1.5             #@param {type:\"number\"}\n",
+                "gpu_irq_k = 1.5             #@param {type:\"number\"}\n",
+                "skip_gpg = False            #@param {type:\"boolean\"}\n"
             ]
         },
         {
