small improvements to handle empty strings

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -43,7 +43,7 @@
                 "cpu_assign_tensors = []        #@param {type:\"raw\"}\n",
                 "\n",
                 "# additional flags\n",
-                "qtype = None                #@param {type:\"string\"}\n",
+                "qtype = \"\"                  #@param {type:\"string\"}\n",
                 "debug = False               #@param {type:\"boolean\"}\n",
                 "info = False                #@param {type:\"boolean\"}\n",
                 "ignore_f32 = False          #@param {type:\"boolean\"}\n",
@@ -196,11 +196,16 @@
                 "add_flag(cmd, \"tolerance\", tolerance)\n",
                 "add_flag(cmd, \"cpu-irq-k\", cpu_irq_k)\n",
                 "add_flag(cmd, \"gpu-irq-k\", gpu_irq_k)\n",
-                "add_flag(cmd, \"qtype\", None)\n",
-                "add_flag(cmd, \"cpu-assign-qtype\", cpu_assign_qtype)\n",
-                "add_flag(cmd, \"gpu-assign-qtype\", gpu_assign_qtype)\n",
-                "add_flag(cmd, \"cpu-tensors-max-size\", cpu_tensors_max_size)\n",
-                "add_flag(cmd, \"gpu-tensors-max-size\", gpu_tensors_max_size)\n",
+                "if qtype:\n",
+                "    add_flag(cmd, \"qtype\", qtype)\n",
+                "if cpu_assign_qtype:\n",
+                "    add_flag(cmd, \"cpu-assign-qtype\", cpu_assign_qtype)\n",
+                "if gpu_assign_qtype:\n",
+                "    add_flag(cmd, \"gpu-assign-qtype\", gpu_assign_qtype)\n",
+                "if cpu_tensors_max_size:\n",
+                "    add_flag(cmd, \"cpu-tensors-max-size\", cpu_tensors_max_size)\n",
+                "if gpu_tensors_max_size:\n",
+                "    add_flag(cmd, \"gpu-tensors-max-size\", gpu_tensors_max_size)\n",
                 "add_flag(cmd, \"exponential-factor\", exponential_factor)\n",
                 "add_flag(cmd, \"debug\", debug)\n",
                 "add_flag(cmd, \"info\", info)\n",
@@ -233,10 +238,12 @@
                 "# Merge regex\n",
                 "merge_cmd = [\n",
                 "    \"bash\", \"../../quants_regex_merger.sh\",\n",
-                "    \"--model-name\", model_name,\n",
-                "    \"--add-ppl\", \"0\",\n",
-                "    \"--model-link\", model_link\n",
+                "    \"--add-ppl\", \"0\"\n",
                 "]\n",
+                "if model_name:  # Checks for not None and not empty\n",
+                "    merge_cmd += [\"--model-name\", model_name]\n",
+                "if model_link:\n",
+                "    merge_cmd += [\"--model-link\", model_link]\n",
                 "merge = subprocess.run(merge_cmd, input=result.stdout, capture_output=True, text=True)\n",
                 "\n",
                 "# Print final output\n",
